--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "homework-05",
+  "name": "project_frontend",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -10,11 +10,17 @@
     "codegen": "graphql-codegen --config codegen.ts"
   },
   "dependencies": {
+    "@ant-design/icons": "5.x",
+    "@ant-design/v5-patch-for-react-19": "^1.0.3",
     "@apollo/client": "^3.13.1",
+    "antd": "^5.24.6",
     "graphql": "^16.10.0",
     "next": "15.1.7",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-daum-postcode": "^3.2.0",
+    "react-dom": "^19.0.0",
+    "react-youtube": "^10.1.0",
+    "swiper": "^11.2.6"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
