--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "@ant-design/v5-patch-for-react-19": "^1.0.3",
     "@apollo/client": "^3.13.1",
     "antd": "^5.24.6",
+    "axios": "^1.8.4",
     "graphql": "^16.10.0",
     "next": "15.1.7",
     "react": "^19.0.0",
     "react-daum-postcode": "^3.2.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "react-infinite-scroll-component": "^6.1.0",
     "react-youtube": "^10.1.0",
     "swiper": "^11.2.6"
