--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "@apollo/client": "^3.13.1",
     "antd": "^5.24.6",
     "axios": "^1.8.4",
+    "express": "^5.1.0",
+    "firebase": "^11.6.0",
+    "git": "^0.1.5",
     "graphql": "^16.10.0",
     "next": "15.1.7",
     "react": "^19.0.0",
@@ -36,6 +39,7 @@
     "eslint-config-prettier": "^10.1.2",
     "eslint-plugin-prettier": "^5.2.6",
     "postcss": "^8",
+    "prettier": "^3.5.3",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
