--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "firebase": "^11.6.0",
     "git": "^0.1.5",
     "graphql": "^16.10.0",
+    "lodash": "^4.17.21",
     "next": "15.1.7",
     "react": "^19.0.0",
     "react-daum-postcode": "^3.2.0",
@@ -31,6 +32,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@graphql-codegen/cli": "^5.0.5",
+    "@types/lodash": "^4.17.16",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
