--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
   "dependencies": {
     "@ant-design/icons": "5.x",
     "@ant-design/v5-patch-for-react-19": "^1.0.3",
-    "@apollo/client": "^3.13.1",
+    "@apollo/client": "^3.13.8",
     "antd": "^5.24.6",
+    "apollo-upload-client": "^18.0.1",
     "axios": "^1.8.4",
     "express": "^5.1.0",
     "firebase": "^11.6.0",
@@ -32,6 +33,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@graphql-codegen/cli": "^5.0.5",
+    "@types/apollo-upload-client": "^18.0.0",
     "@types/lodash": "^4.17.16",
     "@types/node": "^20",
     "@types/react": "^19",
