--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
     "@ant-design/icons": "5.x",
     "@ant-design/v5-patch-for-react-19": "^1.0.3",
     "@apollo/client": "^3.13.8",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/icons-material": "^7.1.1",
+    "@mui/material": "^7.1.1",
     "antd": "^5.24.6",
     "apollo-upload-client": "^18.0.1",
     "axios": "^1.8.4",
